# WingOS

./: ..clang-format.swp  .bochsrc  .clang-format  .clang_complete  .gdbinit  .gitignore  .gitmodules  .travis.yml  Build_guide.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Makefile.save  README.md  WingOS_x64.files  WingOS_x64.includes  compile_flags.txt  kernel.map  limine.cfg  make_cross_compiler.sh  make_disk.sh  make_sysroot.sh  project.json  qloader2.cfg  readme.md  test.hpp
.github/workflows/: check.yml  main.yml
app/: link.ld
app/background/: Makefile  background.cpp
app/console_service/: Makefile  console_service.cpp
app/coreutils/: Makefile  echo.cpp
app/graphic_service/: Makefile  cursor.cpp  cursor.h  graphic_system_service.cpp  graphic_system_service.h  raw_graphic_system.cpp  raw_graphic_system.h  raw_window.cpp  raw_window.h
app/memory_service/: Makefile  memory_service.cpp
app/ps2_keyboard_module/: Makefile  ps2_keyboard_module.cpp
app/ps2_mouse_module/: Makefile  ps2_mouse_module.cpp
app/shell/: Makefile  interpret_command.cpp  interpret_command.h  shell.cpp
app/test/: Makefile  test.cpp
app/test2/: Makefile  test2.cpp
app/tui_service/: Makefile  tui_service.cpp
app/wstart/: Makefile  wstart.cpp
architecture/: spaces.md
disk/: limine.cfg
init_fs/: hello1.txt  limine.cfg  startup.json
initfs/: hello2.txt  limine.cfg  startup.json
initfs/test_directory/: test_another.txt
kernel/: com.h  kernel.cpp  kernel.h  logging.cpp  syscall.cpp  utility.h
kernel/arch/: arch.cpp  arch.h  gdt.cpp  gdt.h  gdt_asm.asm  interrupt.cpp  lock.cpp  lock.h  process.cpp  process.h  programm_launcher.cpp  smp.cpp  smp_start.asm  sse.cpp
kernel/device/: acpi.cpp  apic.cpp  apic.h  ata_driver.cpp  ata_driver.h  hpet.h  local_data.cpp  madt.cpp  pit.cpp  ps_keyboard.cpp  ps_keyboard.h  rtc.cpp
kernel/filesystem/: file_system.cpp  file_system.h  tar_fs.cpp
kernel/generic/: backtrace.cpp  backtrace.h  bitmap.cpp  bitmap.h  general_device.cpp  general_device.h  io_device.cpp  io_device.h  kernel.cpp  kernel.h  kernel_plugs.cpp  liballoc.cpp  liballoc.h  logging.cpp  logging.h  memory_manager.cpp  msg_system.cpp  msg_system.h  physical.cpp  physical.h  print.cpp  print.h  process.cpp  process.h  programm_launcher.cpp  programm_launcher.h  syscall.cpp  syscall.h  utility.cpp  utility.h
kernel/kernel_service/: filesystem_service.cpp  filesystem_service.h  graphic_buffer_service.cpp  graphic_buffer_service.h  kernel_process_service.cpp  kernel_process_service.h  kernel_service.h  memory_service.cpp  print_service.cpp  ps2_device_service.cpp  time_service.cpp
libs/: README.md
libs/gui/: blur.cpp  blur.h  graphic_system.cpp  graphic_system.h  img_bmp.cpp  raw_graphic.cpp  raw_graphic.h  (+4 more)
meta/: scheduler4.py  scheduler5.py  sources.md
patch/: binutils.patch  gcc.patch
src/: CMakeLists.txt  com.cpp  com.h  int_value.h  interface.cpp  interface.h  kernel.cpp  kernel.h  linker.ld  loggging.cpp  loggging.h  logging.cpp  logging.h  stivale.h  stivale_struct.h  syscall.cpp  syscall.h  type_traits  utility.cpp  utility.h
src/arch/: 64bit.h  CMakeLists.txt  arch.cpp  arch.h  elf_gnu_structure.h  gdt.cpp  gdt.h  gdt_asm.asm  interrupt.cpp  interrupt.h  interrupt_handle.asm  lock.cpp  lock.h  pic.cpp  pic.h  process.cpp  process.h  programm_launcher.cpp  programm_launcher.h  smp.cpp  smp.h  smp_start.asm  sse.cpp  sse.h  utility.asm
src/arch/generic/: instruction.hpp  manifest.json  pmm.hpp  state.h  syscalls.h
src/arch/generic/x86/: instruction.cpp  manifest.json  syscall.cpp
src/arch/mem/: liballoc.cpp  liballoc.h  memory_manager.cpp  memory_manager.h  physical.cpp  physical.h  virtual.cpp  virtual.h
src/arch/x86/: CMakeLists.txt  com.cpp  com.hpp  cpuid.cpp  cpuid.hpp  manifest.json  port.hpp
src/arch/x86_64/: CMakeLists.txt  barrier.hpp  context.hpp  gdt.cpp  gdt.hpp  gdt_loading.asm  gdt_loading.s  idt.asm  idt.cpp  idt.hpp  interrupts.cpp  interrupts.hpp  interrupts.s  manifest.json  msr.hpp  paging.hpp  registers.hpp  simd.cpp  simd.hpp  tss.hpp
src/kernel/: CMakeLists.txt  main.cpp
src/kernel/generic/: asset.cpp  asset.hpp  asset_types.hpp  blocker.cpp  blocker.hpp  context.hpp  cpu.cpp  cpu.hpp  cpu_tree.cpp  cpu_tree.hpp  execute.cpp  execute.hpp  ipc.cpp  ipc.hpp  kasan.cpp  kasan.hpp  kernel.hpp  main.cpp  manifest.json  mem.hpp  paging.cpp  paging.hpp  pmm.cpp  pmm.hpp  scheduler.cpp  scheduler.hpp  smart_lock.hpp  space.cpp  space.hpp  syscalls.cpp  syscalls.hpp  task.cpp  task.hpp  ubsan.cpp
src/kernel/linux-x86_64/: manifest.json
src/kernel/loader/: CMakeLists.txt
src/kernel/loader/limine/: entry.cpp  limine.hpp  load_ctx.cpp  manifest.json
src/kernel/loader/linux/: arch_stub.cpp  entry.cpp  manifest.json
src/kernel/x86_64/: CMakeLists.txt  context.cpp  context.hpp  cpu.cpp  cpu.hpp  entry.cpp  gdt.cpp  manifest.json  numa.cpp  numa.hpp  paging.cpp  scheduling.cpp  smp.cpp  smp.hpp  smp_trampoline.s  syscall.asm  syscall.cpp  syscall.hpp
src/libcore/: CMakeLists.txt  alive.hpp  atomic.hpp  bound.hpp  buffer.hpp  core.cpp  core.hpp  encourage.hpp  enum-op.hpp  funcs.hpp  logic.hpp  manifest.json  optional.hpp  path.hpp  result.hpp  shared.hpp  str.hpp  str_writer.hpp  type-utils.hpp  unreachable.h
src/libcore/alloc/: alloc.hpp
src/libcore/ds/: array.hpp  bitmap.hpp  linked_list.hpp  umap.hpp  vec.cpp  vec.hpp
src/libcore/fmt/: flags.hpp  fmt.hpp  fmt_str.hpp  initialize.cpp  initialize.hpp  log.cpp  log.hpp
src/libcore/fmt/impl/: asset_kind.hpp  bitmap.hpp  integers.hpp  ranges.hpp  tabbed.hpp
src/libcore/io/: io.cpp  io.hpp  reader.hpp  seekable.hpp  void.hpp  writer.hpp
src/libcore/lock/: lock.hpp  rwlock.hpp
src/libcore/mem/: mem.hpp  view.hpp
src/libcore/ressources/: ressources.hpp
src/libcore/time/: time.hpp
src/libcore/type/: fn.hpp  trait.hpp  tuple.hpp
unit-test/: Makefile
usr_lib/: assert.h  ctypes.h  entry.cpp  errno.h  math.cpp  math.h  stdarg.h  stddef.cpp  stddef.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  time.cpp  time.h  unistd.cpp  unistd.h
(+733 files in other folders)
